# convergence

./: Cargo.toml  docker-compose.yml  licence  readme.md
.github/workflows/: test.yml
convergence/: Cargo.toml
convergence-arrow/: Cargo.toml
convergence-arrow/data/: 100_4buckets.csv  generate.R
convergence-arrow/examples/: datafusion.rs
convergence-arrow/src/: datafusion.rs  lib.rs  metadata.rs  table.rs
convergence-arrow/tests/: test_arrow.rs  test_connection.rs  test_datafusion.rs
convergence-dynamodb/: Cargo.toml
convergence-dynamodb/src/: exec_get.rs  exec_query.rs  exec_scan.rs  items.rs  lib.rs  provider.rs
convergence-dynamodb/tests/: test_dynamodb.rs
convergence/src/: connection.rs  engine.rs  lib.rs  protocol.rs  protocol_ext.rs  server.rs  to_wire.rs
convergence/tests/: test_connection.rs
