[package]
name = "convergence-arrow"
version = "0.2.0"
authors = ["Ruan Pearce-Authers <ruan@reservoirdb.com>"]
edition = "2018"
description = "Utils for bridging Apache Arrow and PostgreSQL's wire protocol"
license = "MIT"
repository = "https://github.com/reservoirdb/convergence"

[dependencies]
tokio = { version = "1.7" }
sqlparser = "0.10"
async-trait = "0.1"
datafusion = { git = "https://github.com/apache/arrow-datafusion" }
convergence = { path = "../convergence", version = "0.2" }
chrono = "0.4"

[dev-dependencies]
tokio-postgres = { version =  "0.7", features = [ "with-chrono-0_4" ] }
