[package]
name = "convergence-arrow"
version = "0.14.0"
authors = ["Ruan Pearce-Authers <ruanpa@outlook.com>"]
edition = "2018"
description = "Utils for bridging Apache Arrow and PostgreSQL's wire protocol"
license = "MIT"
repository = "https://github.com/returnString/convergence"

[dependencies]
tokio = { version = "1" }
async-trait = "0.1"
datafusion = "34"
convergence = { path = "../convergence", version = "0.14.0" }
chrono = "0.4"

[dev-dependencies]
tokio-postgres = { version =  "0.7", features = [ "with-chrono-0_4" ] }
