[package]
name = "convergence-dynamodb"
version = "0.3.1"
authors = ["Ruan Pearce-Authers <ruan@reservoirdb.com>"]
edition = "2018"
description = "Utils for bridging DynamoDB and PostgreSQL's wire protocol"
license = "MIT"
repository = "https://github.com/reservoirdb/convergence"

[dependencies]
tokio = { version = "1.16" }
sqlparser = "0.15"
async-trait = "0.1"
datafusion = "5.0.0"
convergence = { path = "../convergence", version = "0.3.0" }
convergence-arrow = { path = "../convergence-arrow", version = "0.3.0" }
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
thiserror = "1.0"

[dev-dependencies]
tokio-postgres = "0.7"
uuid = { version = "0.8", features = [ "v4" ] }
