[package]
name = "convergence"
version = "0.3.1"
authors = ["Ruan Pearce-Authers <ruan@reservoirdb.com>"]
edition = "2018"
description = "Write servers that speak PostgreSQL's wire protocol"
license = "MIT"
repository = "https://github.com/reservoirdb/convergence"

[dependencies]
tokio = { version = "1.16", features = [ "net", "rt-multi-thread", "macros", "io-util", "io-std" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }
thiserror = "1.0"
bytes = "1.0"
futures = "0.3"
sqlparser = "0.13"
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio-postgres = "0.7"
